examples/errors/same_arguments.ign
<function name=hello a:int a:int>
  {print('wow')}
</function>

<program>
  {hello(1,2)}
</program>